--- a/css/icon.css
+++ b/css/icon.css
@@ -1,4 +1,4 @@
-@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1609740544') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1609740544') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1609740544') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1609740544') format('svg'); }
+@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1611728758') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1611728758') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1611728758') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1611728758') format('svg'); }
 *[class^="icon-"]:before, *[class*=" icon-"]:before { font-family: "icon"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; }
 
 .icon-plus:before { content: "\e922"; }
@@ -23,7 +23,7 @@
 
 .icon-youtube:before { content: "\e910"; }
 
-.icon-TikTok:before { content: "\e911"; }
+.icon-tiktok:before { content: "\e911"; }
 
 .icon-discord:before { content: "\e912"; }
 
@@ -49,6 +49,16 @@
 
 .icon-qrcode---FontAwesome:before { content: "\e91d"; }
 
+.icon-eye:before { content: "\f06e"; }
+
+.icon-eye-slash:before { content: "\f070"; }
+
+.icon-chain:before { content: "\f0c1"; }
+
+.icon-link:before { content: "\f0c1"; }
+
+.icon-paypal:before { content: "\f1ed"; }
+
 .icon-error:before { content: "\e91e"; }
 
 .icon-content_copy:before { content: "\e902"; }
@@ -68,13 +78,3 @@
 .icon-search:before { content: "\e920"; }
 
 .icon-x:before { content: "\e909"; }
-
-.icon-home:before { content: "\e908"; }
-
-.icon-eye:before { content: "\f06e"; }
-
-.icon-eye-slash:before { content: "\f070"; }
-
-.icon-chain:before { content: "\f0c1"; }
-
-.icon-link:before { content: "\f0c1"; }
