--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?nlsgnx');
-  src:  url('fonts/icomoon.eot?nlsgnx#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?nlsgnx') format('truetype'),
-    url('fonts/icomoon.woff?nlsgnx') format('woff'),
-    url('fonts/icomoon.svg?nlsgnx#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?wubkuo');
+  src:  url('fonts/icomoon.eot?wubkuo#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?wubkuo') format('truetype'),
+    url('fonts/icomoon.woff?wubkuo') format('woff'),
+    url('fonts/icomoon.svg?wubkuo#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -58,7 +58,7 @@
 .icon-youtube:before {
   content: "\e910";
 }
-.icon-TikTok:before {
+.icon-tiktok:before {
   content: "\e911";
 }
 .icon-discord:before {
@@ -97,6 +97,21 @@
 .icon-qrcode---FontAwesome:before {
   content: "\e91d";
 }
+.icon-eye:before {
+  content: "\f06e";
+}
+.icon-eye-slash:before {
+  content: "\f070";
+}
+.icon-chain:before {
+  content: "\f0c1";
+}
+.icon-link:before {
+  content: "\f0c1";
+}
+.icon-paypal:before {
+  content: "\f1ed";
+}
 .icon-error:before {
   content: "\e91e";
 }
@@ -126,19 +141,4 @@
 }
 .icon-x:before {
   content: "\e909";
-}
-.icon-home:before {
-  content: "\e908";
-}
-.icon-eye:before {
-  content: "\f06e";
-}
-.icon-eye-slash:before {
-  content: "\f070";
-}
-.icon-chain:before {
-  content: "\f0c1";
-}
-.icon-link:before {
-  content: "\f0c1";
 }
