--- a/scss/icon.scss
+++ b/scss/icon.scss
@@ -57,6 +57,7 @@
 .icon-save:before { content: "\e904"; }
 .icon-remove_red_eyevisibility:before { content: "\e905"; }
 .icon-cancel:before { content: "\e90a"; }
+.icon-home:before { content: "\e908"; }
 .icon-chevron-right:before { content: "\e906"; }
 .icon-menu:before { content: "\e907"; }
 .icon-search:before { content: "\e920"; }
