--- a/css/icon.css
+++ b/css/icon.css
@@ -1,4 +1,4 @@
-@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1611728758') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1611728758') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1611728758') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1611728758') format('svg'); }
+@font-face { font-family: "icon"; src: url('../font/icomoon/fonts/icomoon.eot?1611749944') format('embedded-opentype'), url('../font/icomoon/fonts/icomoon.woff?1611749942') format('woff'), url('../font/icomoon/fonts/icomoon.ttf?1611749942') format('truetype'), url('../font/icomoon/fonts/icomoon.svg?1611749944') format('svg'); }
 *[class^="icon-"]:before, *[class*=" icon-"]:before { font-family: "icon"; speak: none; font-style: normal; font-weight: normal; font-variant: normal; }
 
 .icon-plus:before { content: "\e922"; }
@@ -70,6 +70,8 @@
 .icon-remove_red_eyevisibility:before { content: "\e905"; }
 
 .icon-cancel:before { content: "\e90a"; }
+
+.icon-home:before { content: "\e908"; }
 
 .icon-chevron-right:before { content: "\e906"; }
 
