--- a/font/icomoon/style.css
+++ b/font/icomoon/style.css
@@ -1,10 +1,10 @@
 @font-face {
   font-family: 'icomoon';
-  src:  url('fonts/icomoon.eot?wubkuo');
-  src:  url('fonts/icomoon.eot?wubkuo#iefix') format('embedded-opentype'),
-    url('fonts/icomoon.ttf?wubkuo') format('truetype'),
-    url('fonts/icomoon.woff?wubkuo') format('woff'),
-    url('fonts/icomoon.svg?wubkuo#icomoon') format('svg');
+  src:  url('fonts/icomoon.eot?cbpsal');
+  src:  url('fonts/icomoon.eot?cbpsal#iefix') format('embedded-opentype'),
+    url('fonts/icomoon.ttf?cbpsal') format('truetype'),
+    url('fonts/icomoon.woff?cbpsal') format('woff'),
+    url('fonts/icomoon.svg?cbpsal#icomoon') format('svg');
   font-weight: normal;
   font-style: normal;
   font-display: block;
@@ -129,6 +129,9 @@
 }
 .icon-cancel:before {
   content: "\e90a";
+}
+.icon-home:before {
+  content: "\e908";
 }
 .icon-chevron-right:before {
   content: "\e906";
