--- a/scss/link.scss
+++ b/scss/link.scss
@@ -119,6 +119,11 @@ a {
     width: 198px;
     margin-bottom: 15px;
 
+    @include range-width(0, 450px) {
+      margin: 0 auto;
+      margin-bottom: 15px;
+    }
+
     &:after {
       position: absolute;
       right: 10px;
